			Java Electric change log ( MAIN branch )

NOTE: Please place changes under the version that will be released next.

************************* Version 8.04b: *********************************

IMP: (11/16/05, DN) Memory optimization: Name module stores only canonic String instead of Name.

IMP: (11/15/05, SMR) Spice templates can now have multiple lines.

IMP/MAN: (11/15/05, SMR) New command: "Tool / Network / Repair Power and Ground" fixes
     export characteristics that are inconsistent (Bug #380).

IMP: (11/15/05, SMR) Now have "Tool / NCC" command to create NCC annotations (Bug #646).
     NCC attributes are NOT inheritable or parameters (cleaned-up on library input).
     Cell attributes that are not inheritable are mentioned in properties dialogs.

BUG: (11/14/05, SMR) Project management presents libraries unsorted (Bug #750).
FIX: Sort the libraries.

BUG: (11/13/05, GVG) Few bug fixes in the design rules tab due to changes for DRC deck and typesafe
enum.
FIX: Mainly in DesignRulesTab.java and DesignRulesPanel.java.

BUG: (11/11/05, SMR) "Set Focus" command does not make changes that are browsable (Bug #746).
FIX: Improved "SetFocus.java" to use the focus browser.

BUG: (11/11/05, SMR) Crashes when adding all libraries to the repository (Bug #740).
FIX: Now adds libraries just once (was adding them twice).

IMP: (11/11/05, SMR) Adding libraries to repository has "Yes to All" option
     for also adding dependent libraries (Bug #742).

BUG: (11/11/05, SMR) Adding fill library to the repository takes too long (Bug #749).
FIX: Improved skeletonization speed.

BUG: (11/11/05, SMR) Checking out cells marks them as modified (Bug #748).
FIX: Cell changes must be done without change control to avoid other changes.

BUG: (11/10/05, SMR) Crash when drawing upside-down text (rotated 180).
FIX: In PixelDrawing.drawText, 180 degree case should use the index:
     ((rasHeight-y-1)>>shiftUp) * textImageWidth + ((rasWidth-x-1)>>shiftUp)
